<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="350dp"
        android:src="@drawable/img_principal"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome"
        android:textColor="@color/TextBlue"
        android:textAlignment="center"
        android:textSize="46sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_create_a_new_account"
        android:textAlignment="center"
        android:textColor="@color/TextBlue"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="3dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/txt_login"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/txt_register"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="30dp" />

</LinearLayout>